src/test/ui/consts/drop_zst.stderr
error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/drop_zst.rs:14:9
   |
LL |     let s = S;
   |         ^ constant functions cannot evaluate destructors

error: aborting due to previous error

For more information about this error, try `rustc --explain E0493`.
